@@ -1,9 +1,12 @@
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpClient.Redirect;
+import java.net.http.HttpClient.Version;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodyHandlers;
+import java.time.Duration;
 
 /**
  * Class representing the Maven central repo, able to search the Maven central
@@ -16,43 +19,31 @@ import java.net.URL;
 
 public class MavenRepo {
 
-    public void searchMaven() {
-        URL serverAddress = null;
-        HttpURLConnection connection = null;
-        BufferedReader reader = null;
-        StringBuilder sb = null;
-        String line = null;
-
+    public String searchMaven() {
+        HttpClient client = null;
+        HttpRequest request = null;
+        String responseString = null;
+        
         try {
-            serverAddress = new URL("https://search.maven.org/solrsearch/select?q=guice&rows=20&wt=xml");
-            connection = null;
+            client = HttpClient.newBuilder()
+                .version(Version.HTTP_1_1)
+                .followRedirects(Redirect.NORMAL)
+                .connectTimeout(Duration.ofSeconds(20))
+                .build();
+            
+            request = HttpRequest.newBuilder()
+                .uri(URI.create("https://search.maven.org/solrsearch/select?q=guice&rows=20&wt=xml"))
+                .build();
 
-            connection = (HttpURLConnection) serverAddress.openConnection();
-            connection.setRequestMethod("GET");
-            connection.setDoOutput(true);
-            connection.setReadTimeout(1000);
+            HttpResponse<String> response = client.send(request, BodyHandlers.ofString());
 
-            connection.connect();
-
-            reader = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-            sb = new StringBuilder();
-
-            while ((line = reader.readLine()) != null) {
-                sb.append(line + '\n');
-            }
-
-            System.out.println(sb.toString());
-
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
+            responseString = response.body();
         } catch (IOException e) {
             e.printStackTrace();
-        } finally {
-            connection.disconnect();
-            reader = null;
-            sb = null;
-            connection = null;
-        }
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        } 
+        finally { }
+        return responseString;
     }
-
 }
